make proofreading changes to sections 1 and 2

--- a/draft.tex
+++ b/draft.tex
@@ -54,18 +54,18 @@ University of California, San Diego\\
 
 
 \begin{abstract}
-When two parties are engaged in conflict and each distrusts the other's ability to pursue peace, concessions can be used to indicate an interest in making peace. We demonstrate that a lack of trust can prevent optimal concessions from being made, creating inefficiencies in negotiation that can reduce the possibility of peace. We use mechanism design to explore ways in which a third party mediator can act as a guarantor that promised concessions will be delivered, thereby reducing inefficiencies and increasing the potential for peace. In this process, we open up a rationale for mediation: to remove the inefficiencies of signaling in a preliminary round of negotiations. 
+When two parties are engaged in conflict and each distrusts the other's ability to pursue peace, concessions can be used to indicate an interest in making peace. However, when negotiating parties are concerned that concessions could be used against them in the future, a lack of trust can prevent optimal concessions from being made or reduce the possibility of peace. We use mechanism design to explore ways in which a third party mediator can act as a guarantor that promised concessions will be delivered, thereby reducing inefficiencies and increasing the potential for peace. In this process, we open up a rationale for mediation: to remove the inefficiencies of signaling in a preliminary round of negotiations. 
 \end{abstract}
 
 \section{Introduction} %LAKE For instance, the problem you begin with in the cases of Israel/Syria and West Bank are well understood as bargaining over assets that confer future power. But this is not understood as a problem of private information, as you treat it here, but as one of credible commitment. Its not clear how your types map onto the commitment problem. HOW: THAT TYPES COULD CHANGE OVER TIME?
 
-In negotiations with its neighbors, Israel is hesitant to give certain concessions. The Golan Heights, captured from Syria during the 1967 War, is a particular point of contention in Israeli-Syrian relations. While the Golan Heights does not have the West Bank's historic or religious importance, Israel values it for its highly strategic location. The Golan Heights could be a useful concession, but Israel senses that were she to give over the land, Syria may ultimately use the concession against them. This same hesitancy exists with the West Bank settlements. Many are located on hilltops that could offer strategic military outposts for forces hostile to Israel. When it occasionally abandons settlements, Israel generally dismantles all infrastructure, including water and electricity, and bulldozes the buildings. Although inefficient, this reduces the possibility of those settlements being used against Israeli interests. Without trust, the most efficient concessions cannot be made.
+In negotiations with its neighbors, Israel is hesitant to give certain concessions. The Golan Heights, captured from Syria during the 1967 War, is a particular point of contention in Israeli-Syrian relations. While the Golan Heights does not have the West Bank's historic or religious importance, Israel values it for its highly strategic location. The Golan Heights could be a useful concession, but Israel senses that were she to give over the land, Syria may ultimately use the concession against them. This same hesitancy exists with the West Bank settlements. Many are located on hilltops that could offer strategic military outposts for forces hostile to Israel. When it occasionally abandons settlements, Israel generally dismantles all infrastructure, including water and electricity, and bulldozes the buildings. Although inefficient, this reduces the possibility of those settlements being used against Israeli interests. Without trust, the most efficient concessions often are not made.
 
 This holds for concessions other than land. Russia is loathe to cede further autonomy to Chechnya, even though it could hypothetically relieve tensions and reduce violence. If Chechen autonomy could in fact lead to lowered violence, it is possible that this move would be in Russia's best interest. But the Russians perceive, perhaps correctly, that any move towards autonomy might only give Chechens further leverage against the Kremlin. From the Russian perspective, granting the concession of increased autonomy might have large future costs.
 
 This paper uses a two-sided signaling model to propose a new theoretical explanation for why inefficiency might occur in a conflict setting: inefficient concessions may be preferred if the most efficient concessions are seen as having additional, future costs.\footnote{The type of inefficient concessions addressed here are those whose value to the recipient are lower than the cost to the giver.} The Golan Heights, for example, will not be conceded if Israel foresees future security risks that outweigh the immediate benefits of peace. We then suggest a new explanation for the effectiveness of third-party mediation. Using a mechanism design framework, we demonstrate that a mediator can facilitate more efficient concessions by removing uncertainty about the ability of the parties to commit to peace.
 
-While an integral part of the literature on conflict, concessions have been only partially addressed by theoretical research. The broader literature that attempts to model war has included concessions as part of bargaining, but has not explicitly considered the role of concessions in achieving peace. Schelling's \emph{Arms and Influence} (1966) modeled war with a game theoretic framework, and Powell (1999) has also defended the use of modeling in understanding war. Fearon (1995), Powell (1996a and 1996b, 2006) and others consider war to be a bargaining failure, caused by commitment problems and asymmetric information. When the assets that are the object of the bargaining confer future power, a lack of credible commitment, or trust, can create a holdup problem that prevents the optimal level of cooperation.
+While an integral part of the literature on conflict, concessions have been only partially addressed by theoretical research. The broader literature that attempts to model war has included concessions as part of bargaining, but has not explicitly considered the role of concessions in achieving peace. Schelling's \emph{Arms and Influence} (1966) modeled war with a game theoretic framework, and Powell (1999) has also defended the use of modeling in understanding war. Fearon (1996), Powell (1996a and 1996b, 2006) and others consider war to be a bargaining failure, caused by commitment problems and asymmetric information. When the assets that are the object of the bargaining confer future power, a lack of credible commitment, or trust, can create a holdup problem that prevents the optimal level of cooperation (Fearon 1996).
 
 In these models war can be averted by splitting the pie (i.e. the disputed territory) in a way acceptable to both parties. Concessions are modeled as offering part of the pie to the other party, and asymmetric information is about each party's \textit{resolve} to fight and/or military capabilities (Arena 2013). In this context, an example of costly signaling would be military preparations for war (Slantchev 2011).
 
@@ -75,9 +75,9 @@ We will approach the commitment problem through this same general understanding,
 %In addition to concessions, De Dreu also reports laboratory results on mediation; he concludes that a weaker mediator should work with promises while a more powerful one can be effective with threats.  Larson (1988) and others have applied this framework to political science questions. On the theoretical side, Filson and Werner (2007) use a bargaining setup to explore the sensitivities of costs compared to the sensitivity of giving concessions. 
 %LAKE: The psychological literature as applied in political science spent a lot of time in the 1970s and 1980s focusing on Graduated Reductions in Tensions (GRIT) as a form of confidence building. See Debbie LarsonÕs work (sheÕs at Poli Sci, UCLA, I donÕt have the cites handy). This is clearly relevant to your discussion of the laboratory experiments on p.3. BH WATSON'S STARTING SMALL COULD BE RELEVANT HERE
 
-In conflict resolution, concessions may act as signals or as an end in themselves -- or as both simultaneously. One contribution of this paper is that it allows concessions to have material value, signaling value, and both. We will show that when concessions are used solely for signaling, some of the material value of the concessions may be purposefully destroyed and thus inefficiencies can emerge.
+In conflict resolution, concessions may act as signals or as an end in themselves -- or as both simultaneously. One contribution of this paper is that it allows concessions to have future material value, signaling value, and both. We will show that when concessions have both signaling and future material value, some of the material value of the concessions may be purposefully destroyed and thus inefficiencies can emerge.
 
-In analyzing both the signaling and material value of concessions, an extensive literature on gift giving is particularly helpful. Like concessions, costly gifts have been shown to have a valuable role in relationship building. And the gift giving literature, more so than the concessions literature, focuses specifically on the issue of efficiency. Inefficiency is defined for the purposes of this paper as some sort of money burning: giving a gift or concession that is more costly to the giver than it is valuable to the recipient, that is, using a concession as a signal and not taking advantage of its full inherent value. It is not problematic for giving to also have a signaling component, but it is ideal if the full value of the gift can be transferred. %The theoretical basis for this has its roots in the economics literature on gift giving.  %this needs lots of work and maybe a cite- use def of "inefficiency" in the camerer paper or others
+In analyzing both the signaling and material value of concessions, an extensive literature on gift giving is particularly helpful. Like concessions, costly gifts have been shown to have a valuable role in relationship building. And the gift giving literature, more so than the concessions literature, focuses specifically on the issue of efficiency. Inefficiency is defined for the purposes of this paper as giving a gift or concession that is more costly to the giver than it is valuable to the recipient, that is, using a concession as a signal and not taking advantage of its full inherent value. 
 
 %Gift giving as a whole is inefficient (Waldfogel 2009); it has been estimated that Christmas gift-giving is only 75 percent efficient, meaning that the average gift is valued at 75 cents of the dollar that is spent on it (Waldfogel 1993). But merely looking at aggregate numbers blurs together many possible reasons for gift giving. It has even been theorized that buying something that the receiver would not buy himself is an inherent component of gift giving (Thaler 1985).
 
@@ -95,14 +95,14 @@ The second major explanation for inefficient gifts is expressed in Prendergast a
 
 % However, there are some inadequacies in the model. In their model, agents derive utility from giving and receiving the ``correct" gift because it signals that a friendship is true. There are two types of receivers, A and B. Givers have a prior belief along the A-B continuum that must remain unknown to receivers for the model to work. Givers can choose to give gift A, gift B, or cash. The technological constraint of only two types/ gifts is crucial to the inefficiency result as well in the sense that the gift is in fact an imprecise signal of the giver's belief. Givers' utility includes altruism and a match payoff. This match payoff means players might be willing to risk giving the wrong gift- hence inefficiency. Altruism (wanting recipients to be happy) keeps a giver from giving a gift if his prior is ambiguous enough. Receivers' utility derives from a match payoff as well as the inherent utility of the gift. One limitation of the model is that if (realistic) cheap talk were allowed in addition to the gift, cash could be sent with a note telling which gift the sender believes is correct to ensure efficiency. Receivers do not tell their type because that would sacrifice the match payoff. The authors ``solve" this issue for givers by claiming bought gifts yield a higher payoff than cash with a note. This last explanation works mathematically but is not a general theory- essentially they just argue ``people like gifts." 
 
-We propose another theoretical contribution to explain this real-life phenomenon that is more rooted in a realistic international relations puzzle. The basic formulation of our mechanism-design approach is an expansion of Camerer's (1988) analysis. The model can achieve the basic `inefficient gifts' results of Camerer (1988) and Prendergast and Stole (2001) but does so using a very different explanation for inefficiency. %An extension at the end of our paper compares simultaneous versus sequential concessions in a bilateral negotiation environment. The theory yields results about the effectiveness of different types of enforcement in various circumstances. 
+We propose a different conceptual framework to explain this real-life phenomenon that is more rooted in a realistic international relations puzzle. The basic formulation of our mechanism-design approach is an expansion of Camerer's (1988) analysis. The model can achieve the basic `inefficient gifts' results of Camerer (1988) and Prendergast and Stole (2001) but does so using a very different explanation for inefficiency. %An extension at the end of our paper compares simultaneous versus sequential concessions in a bilateral negotiation environment. The theory yields results about the effectiveness of different types of enforcement in various circumstances. 
 %Since neither the models exemplified by Camerer nor Prendergast and Stole uses a truly general formulation to yield inefficient gift giving % in a one-shot setting,
 %This paper expands upon the existing literature by generalizing the analysis using mechanism design theory more extensively than has been done thus far. %The analysis for this paper is more extensive than any of the published papers mentioned and shows where mechanisms can and cannot improve upon the benchmark bilateral results. 
 The basic model is a costly signaling model, at its root similar to ideas in Spence (1973) and subsequent papers.\footnote{See Connelly et al. (2011) for a review of the costly signaling literature.} In essence, the model shows that if concessions can be later used against the party that gives, then it can be in a negotiating party's best interest to give inefficient concessions. While our model is tailored to an international relations setting, the explanation for inefficient giving of concessions may be more broadly applicable.   
 
 %In these and many other situations, a lack of trust is an impediment to peace, preventing parties from making necessary concessions. Mediation has long been understood as a mechanism for reducing mistrust, but in much of the published literature on international conflict mediation lacks a rigorous theoretical framework.
 
-This demonstration of the incentives for inefficient concessions leads to a new explanation for the role of mediators in conflict resolution. Third party involvement is ubiquitious in conflict and mediation has been extensively studied in the literature, but still the question of third party effectiveness is intensely debated.  Some authors have concluded that mediation has little impact, (Bercovitch 1996;  Bercovitch and Langley 1993; Fortna 2003) while others insist that a correct analysis finds mediation playing a positive role in resolving conflict (Dixon 1996; Beardsley et al. 2006).  But the term mediation encompasses a broad range of actions and interactions, making any one-size-fits-all conclusion on the efficacy of mediation suspect. The type of mediation affects the negotiation outcome (Bercovitch 2000; Beardsley et al. 2006) and timing is important (Greig 2005a).
+This demonstration of the incentives for inefficient concessions leads to a new explanation for the role of mediators in conflict resolution. Third party involvement is ubiquitious in conflict and mediation has been extensively studied in the literature, but still the question of third party effectiveness is intensely debated.  Some authors have concluded that mediation has little impact, (Bercovitch 1996;  Bercovitch and Langley 1993; Fortna 2003) while others insist that a correct analysis finds mediation playing a positive role in resolving conflict (Dixon 1996; Beardsley et al. 2006).  But the term mediation encompasses a broad range of actions and interactions, making any one-size-fits-all conclusion on the efficacy of mediation difficult. The type of mediation affects the negotiation outcome (Bercovitch 2000; Beardsley et al. 2006) and timing is important (Greig 2005a).
 
 It is essential to focus more precisely on the specific actions and environments that make use of particular types of mediation, which is how we approach the question. This paper models an environment where the primary issue is trust, not uncertainty about an opponent's capabilities, and where a mediator is employed who has manipulative abilities. Mediation rarely occurs in the absence of violent conflict (Bercovitch 1996; Beardsley 2006). In this paper, parties are in conflict and can benefit from seeking mediation in order to overcome mistrust. Parties are more likely to seek mediation when they are entrenched in costly conflict (Bercovitch and Jackson 2001; Greig 2005b; Greig and Diehl 2006; Terris and Maoz 2005; Svensson 2008). Alternatively, parties may seek a mediator to justify difficult concessions and avoid angering domestic constituencies (Allee and Huth 2006, Beardsley 2010).
 
@@ -112,9 +112,9 @@ These empirical results have until recently lacked strong theoretical foundation
 \section{Model} %A DIFFERENT MODEL BUT SAME RESULT AS FR 10; THIS SHOULD BUILD OUR CONFIDENCE IN MODELLING. EMPHASIZE SCENARION (EGYPT USRAEL ETC) THAT ARE BETTER TO MODEL WITH Our MODEL. IT CAN ALSO BE THOUGHT OF AS REDUCED FORM OF A BARGAINING MOEL, BUT IT DOES NOT NEED TO BE! NEED TO GIVE EXAMPLES WHERE Our MODEL IS BETTER THAN BARGAINING- EXAMPLES. WHEN TRUST IS AN ISSUE (PUT THIS IN THE TRUST SECTION)
 %Need to add risk aversion in MAIN TEXT
 
-Countries\footnote{Players will be referred to as countries, though it could also be appropriate to think of players as intra-state actors, as in a civil war. } are of two possible types, high and low. A high type discounts future period payoffs at rate $\delta_h$ and a low type discounts at $\delta_l$. $\delta_h >\delta_l$ and both $\delta_h ,\delta_l$ $\in [0,1].$ Before the start of the game, nature independently determines the types of country 1 and country 2. The type distinction, as explained later in the model, is relevant in that it encompasses the country's willingness to cooperate in solving the conflict with the other specific country. It should not be thought of as an inherent quality of a country, but rather an interactive parameter. Thus it is not necessary to think of a type as fixed; it can change as regimes and relations between countries change.\footnote{We can enrich the model to assign a probability (and even different probabilities) of a country's type shifting from high to low or low to high in a given period.}
+Countries\footnote{Players will be referred to as countries, though it could also be appropriate to think of players as intra-state actors, as in a civil war. } are of two possible types, high and low. A high type discounts future period payoffs at rate $\delta_h$ and a low type discounts at $\delta_l$. $\delta_h >\delta_l$ and both $\delta_h ,\delta_l$ $\in [0,1].$ Before the start of the game, nature independently determines the types of country 1 and country 2. The type distinction, as explained later in the model, is relevant in that it encompasses the country's willingness to cooperate in solving the conflict. It should not be thought of as an inherent quality of a country, but rather an interactive parameter. Thus it is not necessary to think of a type as fixed; it can change as regimes and relations between countries change.\footnote{We can enrich the model to assign a probability (and even different probabilities) of a country's type shifting from high to low or low to high in a given period.}
 
- The probability of nature selecting high type for a given player is $p$. The probability of nature selecting low type is $1-p$.\footnote{Note that parameters are symmetric across countries, as is consistent with the literature. Qualititative results do not depend on this being the case, and equilibria and equilibrium concessions can easily be calculated with asymmetric parameters between players.}  Countries are aware of their own type, but not the type of the other country.  Similar scenarios have been modeled as credible commitment problems in the bargaining literature. Our model can be thought of as a reduced form bargaining model, but it can also be considered somewhat differently -- when trust is the issue to be solved, there are several solutions to conflict. Concessions are one way in which countries can signal their commitment.  By modeling the conflict in such a way we can also gain insight from how a third party can affect trust issues inherent to the conflict. %might want to cite fearon and bargaining lit here
+ The probability of nature selecting the high type for a given player is $p$. The probability of nature selecting the low type is $1-p$.\footnote{Note that parameters are symmetric across countries, as is consistent with the literature. Qualititative results do not depend on this being the case, and equilibria and equilibrium concessions can easily be calculated with asymmetric parameters between players.}  Countries are aware of their own type, but not the type of the other country.  Similar scenarios have been modeled as credible commitment problems in the bargaining literature. Our model can be thought of as a reduced form bargaining model, but it can also be considered somewhat differently -- when trust is the issue to be solved, there are several solutions to conflict. Concessions are one way in which countries can signal their commitment.  By modeling the conflict in such a way we can also gain insight as to how a third party can ameliorate trust issues inherent to the conflict. %might want to cite fearon and bargaining lit here
 %might want to eventually add the stochastic type switch- or at least talk about how that changes analysis
 
 In period 0, countries 1 and 2 simultaneously give costly concessions $g_1$ and $g_2$ $\in \mathbb{R} \geq 0$. Concessions are given at cost $C(g_i)$ and benefit the recipient in the amount $g_i$, where $i\in\left\{1,2\right\}$. For simplicity, we assume $C(g_i)= g_i$.
@@ -122,7 +122,7 @@ In period 0, countries 1 and 2 simultaneously give costly concessions $g_1$ and 
 Beginning in period 1, countries engage in an infinitely repeated Prisoner's Dilemma once per period with stage game payoffs represented below. While not a good representation of all-out war, the Prisoner's Dilemma is appropriate to represent a limited, continued conflict, not a zero-sum short term war. In cases appropriately modeled by a Prisoner's Dilemma, it would be better for both parties to exit the protracted conflict, but no party has the unilateral incentive to do so. The critical results of this paper do not depend on a prisoner's dilemma structure; they require only that a better result can be achieved through trust or credible commitment. Thus, a stag hunt or other game structures are also possible. The Prisoner's Dilemma is used because of its wide exposure in the literature.\footnote{This payoff matrix does not distinguish between civil and interstate conflict, though in practice the effects on the payoffs might indeed have a different structure in the different cases.} %cite difference from fearon here?
 %LAKE More generally, the problem of war, on which you implicitly focus, is now understood as a pure bargaining game (i.e., zero sum). This is not well represented by the PD. You need to make the link Ğ or differentiate Ğ what youÕre doing here from the Fearon-Powell models to which you appeal.
 
-The choice of ``Trust'' or ``Fight'' will be referred to as the county's stage game action.
+The county's stage game actions will be referred to as ``Trust'' and ``Fight'':
 
 \begin{center}
 \captionof{table}{Stage game payoffs}
@@ -143,7 +143,7 @@ Assume $T>W-D$.
  Payoffs for a country are the sum the stage game payoffs, discounted by $\delta.$ For example, if both parties play ``Trust'' in every period, the payoff for a player $i$ is $\sum_{t=1}^\infty \de_i^{t-1} T = \frac{T}{1-\de_i}.$ Parameters are common knowledge with the exception of $\delta_i$, which is country i's private information. %Countries' utility is calculated as ex interim utility (Holmstrom and Myerson 1983),  i.e. when countries know their own type but not that of the other country. Depending on parameters, multiple equilibria are often possible. 
 The measure of social welfare, and thus the determinant of the optimal equilibrium, will be the sum of participating high types' expected utilities.
 
- If $\delta$ is high enough for both countries, the cooperative outcome of ``Peace'' (Trust, Trust) can be sustained with a grim trigger punishment threat. The assumption $T>W-D$ ensures that payoffs from Peace (even if it cannot be held as an equilibrium) are higher than for ``War'' (Fight, Fight).\footnote{A country whose payoffs violate this assumption is of a special ``very low'' type that will be considered later in the analysis.}
+ If $\delta$ is high enough for both countries, the cooperative outcome of ``Peace'' (Trust, Trust) can be sustained with a grim trigger punishment threat. The assumption $T>W-D$ ensures that payoffs from Peace are higher than for ``War'' (Fight, Fight).
 For a Peace equilibrium to exist, $\delta$ must be high enough for each country so that sustaining Peace is more attractive than deviating. 
 The threshold $\delta^*$ needed is \be
  \delta^* = \frac{W}{T+D}
@@ -152,13 +152,13 @@ Assume $\delta_h> \delta^*$ and $\delta_l < \delta^*$.
 
 \section{Analysis of Benchmark Cases}
 \label{sec:bench}
-When countries are faced with doubts about each other's motives, they have several options of how to proceed. There are three basic types of equilibria that this analysis will examine.\footnote{If the discount factor for the high type ($\delta_h$) exceeds the cutoff found in expression (1), there are many types of equilibria; consider for instance oscillating every other period between Peace and War with a grim trigger War threat. In this paper, we are not interested in these equilibria because they are not as realistic for applications to conflict scenarios. These are also always payoff dominated by at least one of the other equilibria discussed, so are not attractive.} A thorough analysis of the different types of equilibria, as well as all proofs for this section, can be found in the appendix. 
+When countries are faced with doubts about each other's motives, they can proceed in several different ways. There are three basic types of equilibria that this analysis will examine.\footnote{If the discount factor for the high type ($\delta_h$) exceeds the cutoff found in expression (1), there are many types of equilibria; consider for instance oscillating every other period between Peace and War with a grim trigger War threat. In this paper, we are not interested in these equilibria because they are not as realistic for applications to conflict scenarios. These are also always payoff dominated by at least one of the other equilibria discussed, so are not attractive.} The Appendix provides a thorough analysis of the various equilibria as well as all proofs for this section. 
 \\
 \\
 {\bf \emph{Pooling equilibrium}\\}
 \vskip-.2in
 In the \emph{pooling equilibrium}, both countries do not give concessions in period 0, then always play Fight in every period beginning with period 1. 
-Countries continue to doubt, doing nothing to bridge the credibility gap, and thus not cooperating. This is a \emph{pooling equilibrium}, and is likely to happen when countries are in long-set patterns of distrust. Active fighting is not necessary; remaining outside of a state of peace is all that is required.  See Lemma~\ref{lemma:1} and Lemma~\ref{lemma:2} in the appendix for a formal characterization of this type of equilibrium. 
+Countries continue to doubt, doing nothing to bridge the credibility gap, and thus not cooperating. This \emph{pooling equilibrium} is likely to happen when countries are in long-set patterns of distrust. Active fighting is not necessary; remaining outside of a state of peace is all that is required.  See Lemma~\ref{lemma:1} and Lemma~\ref{lemma:2} in the appendix for a formal characterization of this type of equilibrium. 
 
 Cyprus' civil war is a good example of the pooling equilibrium where neither side is taking actions to move things forward. While both sides posture that they want peace, and while there has been some lessening of tensions, very few concrete actions have been taken that move the sides toward settlement. This conflict is a stalemate. 
 
@@ -503,6 +503,8 @@ Whether it is beneficial for high types to settle on the efficient concession or
 %\item De Dreu, Carsten K. W. (1995). ``Coercive Power And Concession Making in Bilateral Negotiation.'' \emph{Journal of Conflict Resolution} 39, 646.
 
 \item Dixon, William. (1996). ``Third-Party Techniques for Preventing Conflict Escalation and Promoting Peaceful Settlement.'' \emph{International Organization} 50, 653-681. 
+
+\item Fearon, James. (1996). ``Bargaining Over Objects that Influence Future Bargaining Power.'' \emph{Chicago Center on Democracy Working Paper}, University of Chicago.
 
 \item Fey, Mark and Kristopher W. Ramsay. (2009). ``Mechanism Design Goes to War: Peaceful Outcomes with Interdependent and Correlated Types." \emph{Review of Economic Design} 13:3, 233-250.
 
