check math for intermediate step for Thm 4; add notes on e=0 case

--- a/notes.tex
+++ b/notes.tex
@@ -191,6 +191,14 @@ Next we get the threshold for $\de_h$ that is necessary for a concessions separa
 		\[
 		  pT + pTg - Dg - pW + pD + pDg - g_h + g_h \de_h \geq 0
 		\]
+	\item For $e=0$, you're back in the original case with no material value, i.e. enforceable for same $\de_h$ has no material value case
+		\begin{itemize}
+			\item But check: when $e=0$, also wipe out immediate monetary value?
+				\begin{itemize}
+					\item Not from utility standpoint, but from IC standpoint because direct benefit of gift cancels out
+				\end{itemize}
+		\end{itemize}
+	\item But high type utility goes down
 \end{itemize}
 
 \newpage
