add notes on Thm 5

--- a/notes.tex
+++ b/notes.tex
@@ -85,6 +85,26 @@ Need to start by assuming that $\de_h <$ threshold where separating with no conc
 	\item \textbf{Check to see whether Theorem 4 proof has to change.}
 \end{itemize}
 
+\vskip.2in
+With $\al = 1$,
+\begin{itemize}
+	\item SWOC (separating without concessions) when $\de_h \geq \frac{W}{(1-p)W + p(T+D)}$
+	\item CSE (concessions separating equilibrium) when $\de_h \geq \frac{W}{T+D}$
+\end{itemize}
+With $\al \in [0,1)$ and $e=1$,
+\begin{itemize}
+	\item SWOC doesn't change because there are no concessions
+	\item WTS there are parameters where can't get STC outcome because of $\al <1$
+		\begin{itemize}
+			\item $e < 1$ means some of these \textit{can} get to peace
+			\item but some can't under \textit{any} value of $e$ [assuming $e$ chosen at same time as $g$]
+		\end{itemize}
+\end{itemize}
+Remember that decision between equilibria is made not by what \textit{can} be achieved in terms of $\de$, but by best response, i.e. ``Does high type do better by not giving concession?''
+\begin{itemize}
+	\item Should check in my numerical examples
+\end{itemize}
+
 \vskip.4in
 Intermediate step for Theorem 4
 \begin{itemize}
