add notes on min separating concessions for different values of e

--- a/notes.tex
+++ b/notes.tex
@@ -86,6 +86,11 @@ Need to start by assuming that $\de_h <$ threshold where separating with no conc
 \end{itemize}
 
 \vskip.2in
+When $e=1$ and no material value, $g_h^* = p(T+D)$ is the smallest concession for CSE. \\
+When $e=1$ and concessions have material value, $g' = \frac{p(1-\de_l)(D+T)}{(1-\de_l)(1-pT) + (1-p)D}$ is the minimum separating concession [Theorem 3]
+I claim in Theorem 5 that the minimum separating concession under mediation is $g^* = \frac{g'}{1-p}$.
+
+\vskip.2in
 With $\al = 1$,
 \begin{itemize}
 	\item SWOC (separating without concessions) when $\de_h \geq \frac{W}{(1-p)W + p(T+D)}$
